# unihistext

./: Makefile  README.rst  combining.txt  unihistext  unihistext.py
debian/: README  changelog  control  copyright  rules
doc/: tekstony.txt
example/: MUFI_4.0-names.txt  sample_output.txt  sample_text.txt  textel_names.txt
old/uniutils-2.25/: COPYING  CREDITS  Makefile.in  TODO  offsettbl.c  unames.c  unicode.h
old/uniutils-2.25/debian/: copyright
scripts/: gzip-wrapper.sh  make-wrapper.sh  version-gen.sh
src/: gzip-wrapper.sh  helpers.py  make-wrapper.sh  unicode_blocks.py  unihist.py  unihistext  unihistext.py  unihistimpl.py  uninormalize  uninormalize.py  version-gen.sh
src/old/: uniutils_2.25-3.dsc
src/old/uniutils-2.25/: ExplicateUTF8.c  Makefile.am  README  configure  unidesc.c  uniname.1  uniname.c  unirange.c
test-data/: 001.in  002.in  003.in  004.in  no-compose.001  space-combined.in
uniutils-2.25/: ChangeLog  NEWS  configure.ac  unihist.1  unihist.c  unirev.1  unirev.c
uniutils-2.25/debian/: changelog  control  rules  uniutils.manpages  utf8lookup.1
